# classix

./: .codecov.yml  .coverage  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README-ch.md  README.md  README.rst  SOFTWARE_GUIDE.md  auto_config.sh  classixclustering-1.3.0-cp312-cp312-linux_x86_64.whl  clx_unittest.py  coverage.xml  precompile.sh  pyproject.toml  record.txt  requirements.txt  run_docker.sh  runtest.py  setup.py  unittest.py  unittests.py
ClassixClustering.egg-info/: PKG-INFO  SOURCES.txt
classix/: __init__.py  aggregate.py  aggregate_c.c  aggregate_c.cp312-win_amd64.pyd  aggregate_c.pyx  aggregate_cm.c  aggregate_cm.cp312-win_amd64.pyd  aggregate_cm.pyx  aggregate_ed.py  aggregate_ed_c.c  aggregate_ed_c.pyx  aggregate_ed_cm.c  aggregate_ed_cm.pyx  aggregate_md.py  aggregate_md_cm.c  aggregate_md_cm.pyx  aggregate_td.py  aggregate_td_cm.cpp  aggregate_td_cm.pyx  aggregation.py  aggregation_c.c  aggregation_c.pyx  aggregation_cm.c  aggregation_cm.pyx  aggregation_test.py  clustering.py  merge.py  merge_cm.c  merge_cm.cp312-win_amd64.pyd  merge_cm.pyx  merge_cm_win.c  merge_cm_win.cp312-win_amd64.pyd  merge_cm_win.pyx  merge_ed.py  merge_ed_cm.c  merge_ed_cm_win.c  merge_md.py  merge_md_cm.c  merge_md_cm.pyx  merge_td.py  (+9 more)
classix.egg-info/: PKG-INFO  SOURCES.txt
classixclustering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
demos/: Clustering_RNA_of_coronavirus.ipynb  Dealing_with_tightly_packed_clusters.ipynb  Performance_test_Covid3MC.ipynb  Performance_test_CovidENV.ipynb  Performance_test_Gaussian_blobs.ipynb  Performance_test_Olivetti.ipynb  Performance_test_Phoneme.ipynb  Segmenting_greek_coins.ipynb  URI_machine_learning_benchmark.ipynb  classix_m_expt_banknote.ipynb  classix_paper_example_Covid3MC.ipynb  classix_paper_example_CovidENV.ipynb  classix_paper_example_Gaussian.ipynb  classix_paper_example_Image.ipynb  classix_paper_example_Phoneme.ipynb  classix_t_main.ipynb  classix_t_prob.ipynb
docker/: Dockerfile  dockerfile  requirements.txt
docs/: Makefile  agg_parameters.html  comparison.html  contact.html  explainable_clustering.html  genindex.html  license.html  mg_parameters.html  outlier_detection.html  quickstart.html  requirements.txt  searchindex.js
egg-info/: PKG-INFO  SOURCES.txt  requires.txt
exp/: aggregation_test.py  run_dist_matrix.py  run_exp_main.py  run_facial_cluster.py  run_img_seg.py  run_mcs_noises.py  run_parameter_shape.py  run_perform_comp.py  run_real_world.py  run_scale_lx.py  run_shape_bk.py  run_sklearn_bk.py  run_sort_cp.py  run_synthetic_bk.py  run_tol_test.py  timing_appendix.ipynb
exps/: benchmark.ipynb  run_dist_matrix.py  run_exp_main.py  run_img_seg.py  run_parameter_shape.py  run_perform_comp.py  run_scale_lx.py  run_shape_bk.py  run_sklearn_bk.py  run_sort_cp.py  run_tol_test.py  (+1 more)
info/: PKG-INFO  (+3 more)
(+292 files in other folders)
