# pyproject.toml
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0",
    "numpy>=1.22"
]
build-backend = "setuptools.build_meta"

[project]
name = "classixclustering"
dynamic = ["version"]
description = "Fast and explainable clustering based on sorting"
readme = "README.rst"
authors = [
    {name = "Xinye Chen", email = "xinyechenai@gmail.com"},
    {name = "Stefan Güttel", email = "stefan.guettel@manchester.ac.uk"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.13",
    "pandas",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
    "requests"
]

[project.urls]
Homepage = "https://github.com/nla-group/CLASSIX"
Repository = "https://github.com/nla-group/CLASSIX.git"

[tool.setuptools]
packages = ["classix"]

[tool.setuptools.package-data]
classix = ["*.pyx", "*.pxd"]

[tool.setuptools.dynamic]
version = {attr = "classix.__version__"}
